# mro_agenticops

./: .gitignore  DVC_GUIDE.md  MRO_Rag.txt  QUICKSTART.md  README.md  app.py  mro_agenticops.md  pyproject.toml  requirements.txt  setup.py
.dvc/: config
configs/: default.yaml
data/: processed.dvc  raw.dvc
governance/: data_policy.md
pipelines/: eval_pipeline.py  ingest_pipeline.py
prompts/: rag_template.txt  system_prompt.txt
src/: __init__.py  agent.py  evaluate.py  llm.py  preprocess.py  query.py  retriever.py  train.py
tests/: test_llm.py  test_preprocess.py  test_retriever.py
